// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          basePath=""
          blockId="default_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          basePath=""
          blockId="default_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "default",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.breadcrumb.list - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          basePath=""
          blockId="properties.breadcrumb.list_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          basePath=""
          blockId="properties.breadcrumb.list_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.breadcrumb.list",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.content.style - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          basePath=""
          blockId="properties.content.style_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          basePath=""
          blockId="properties.content.style_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "border": "5px solid blue",
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.content.style",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.footer.style - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          basePath=""
          blockId="properties.footer.style_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          basePath=""
          blockId="properties.footer.style_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <FooterBlock
          basePath=""
          blockId="properties.footer.style_footer"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "border": "5px solid blue",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.footer.style",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.header.color - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          basePath=""
          blockId="properties.header.color_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "color": "#3f51b5",
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          basePath=""
          blockId="properties.header.color_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.header.color",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.header.style - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          basePath=""
          blockId="properties.header.style_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "border": "5px solid blue",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          basePath=""
          blockId="properties.header.style_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.header.style",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.header.theme: light - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          basePath=""
          blockId="properties.header.theme: light_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
              "theme": "light",
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          basePath=""
          blockId="properties.header.theme: light_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.header.theme: light",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.logo.alt - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          basePath=""
          blockId="properties.logo.alt_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          basePath=""
          blockId="properties.logo.alt_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.logo.alt",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.logo.size - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          basePath=""
          blockId="properties.logo.size_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          basePath=""
          blockId="properties.logo.size_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.logo.size",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.logo.src - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          basePath=""
          blockId="properties.logo.src_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          basePath=""
          blockId="properties.logo.src_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.logo.src",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.logo.srcSet - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          basePath=""
          blockId="properties.logo.srcSet_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          basePath=""
          blockId="properties.logo.srcSet_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.logo.srcSet",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.logo.style - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          basePath=""
          blockId="properties.logo.style_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          basePath=""
          blockId="properties.logo.style_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.logo.style",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.menu - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          basePath=""
          blockId="properties.menu_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          basePath=""
          blockId="properties.menu_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.menu",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.style - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          basePath=""
          blockId="properties.style_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          basePath=""
          blockId="properties.style_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-1mli136",
      "id": "properties.style",
    },
    Object {},
  ],
]
`;
